--- a/UIEcomerce/src/app/layout/header/header.component.html
+++ b/UIEcomerce/src/app/layout/header/header.component.html
@@ -42,7 +42,7 @@
          <div class="flex items-center">
         <a routerLink="/products" class="mr-6">Productos</a>
         <div class="relative" (mouseenter)="showCart.set(true)" (mouseleave)="showCart.set(false)">
-            <a routerLink="/checkout">
+            <a routerLink="/products/checkout">
                 <svg fill="none" height="25" viewBox="0 0 15 15" width="25" xmlns="http://www.w3.org/2000/svg">
                     <path
                     d="M0.978822 0.356323L0.0209961 0.643671L3.12789 11H14.9999V4.5C14.9999 3.11929 13.8806 2 12.4999 2H1.47192L0.978822 0.356323Z"
