--- a/UIEcomerce/src/app/layout/header/header.component.html
+++ b/UIEcomerce/src/app/layout/header/header.component.html
@@ -145,7 +145,7 @@
         @for (item of menus$; track $index) {
         @if ( !item.HasSubMenu) {
         <a href="{{ item.Url }}"
-          class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">
+          class="py-3 px-1 text-gray-700 {{ item.Position === 0 ? 'border-b-2 border-blue-600 pb-1' : ''}} hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">
           {{ item.Name }}
         </a>
         }
